<resources>
    <string name="web_client_id">939719790276-bb0j1gq6oi213v0quv3jbar4e02m917l.apps.googleusercontent.com</string>
    <string name="app_name">FirstLab</string>
    <string name="app_greetings">Добро пожаловать</string>
    <string name="use_google_account">Войти через Google</string>
    <string name="goal">в день:</string>
    <string name="feelings_screen_header">Что вы сейчас чувствуете?</string>
    <string name="add_note">Добавить запись</string>
    <string name="my_feeling">Я чувствую</string>
    <string name="journal">Журнал</string>
    <string name="statistic">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="choose_emotion">Выберите эмоцию, лучше всего описывающую, что вы сейчас чувствуете</string>
    <string name="emotion_description">Описание</string>
    <string name="Note">Запись</string>
    <string name="your_activities">Чем вы занимались?</string>
    <string name="yourCompany">С кем вы были?</string>
    <string name="save">Сохранить</string>
    <string name="emotions_category">Эмоции по категориям</string>
    <string name="weekly_emotions_header">Эмоции\nпо дням недели</string>
    <string name="most_frequent_emotes">Самые частые эмоции</string>
    <string name="mood_header"><![CDATA[Ваше настроение в течение дня]]></string>
    <string name="settings_header">Настройки</string>
    <string name="notification_permission">Присылать напоминания</string>
    <string name="add_notification">Добавить напоминание</string>
    <string name="fingerprint_entrance">Вход по отпечатку пальца</string>
    <string name="notification_bottom_sheet">Напоминание</string>
    <string name="hours_label">Часы</string>
    <string name="minutes_label">Минуты</string>
    <string name="profile_name">Иван Иванов</string>
    <string name="heavy_plus_sign">+</string>
    <string name="early_morning">Раннее утро</string>
    <string name="morning">Утро</string>
    <string name="day">День</string>
    <string name="evening">Вечер</string>
    <string name="late_evening">Поздний вечер</string>
    <string name="chip_places">Где вы были?</string>
    <string name="edit_text_hint">Введите текст</string>
    <string name="today">Сегодня,%1$s</string>
    <string name="yesterday">Вчера,%1$s</string>
    <string name="back_button">back_button</string>
    <string name="feelingicon">feelingIcon</string>
    <string name="retry">"Попробуйте еще раз "</string>
    <string name="bio_authentication_failed">Отпечаток не распознан,попробуйте еще</string>
    <string name="authorization">Авторизация</string>
    <string name="cancel">Отмена</string>
    <string name="notification_channel">Ежедневные уведомления</string>
    <string name="notification_tittle">Что вы чувствуете сейчас?</string>
    <string name="channel_id">daily_notifications</string>
    <string name="notification_content">%1$s,пора оставить новую запись</string>
    <string name="notification_permission_toast">Для включения уведомлений нужно дать разрешение</string>
    <string name="zero_notes">0 записей</string>
    <plurals name="posts_count">
        <item quantity="one">%d запись</item>
        <item quantity="two">%d записи</item>
        <item quantity="few">%d записи</item>
        <item quantity="many">%d записей</item>
        <item quantity="other">%d записей</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">%d день</item>
        <item quantity="two">%d дня</item>
        <item quantity="few">%d дня</item>
        <item quantity="many">%d дней</item>
        <item quantity="other">%d дней</item>
    </plurals>
</resources>