<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_handler_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navbarBackground">

        <TextView
            android:id="@+id/bottom_sheet_tittle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/notification_bottom_sheet"
            android:textAppearance="@style/bottomSheetHeaderStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/hours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/time_edit_text_shape"
            android:cursorVisible="false"
            android:focusable="false"
            android:gravity="center_horizontal"
            android:inputType="time"
            android:textAppearance="@style/timeStyle"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_tittle" />

        <TextView
            android:id="@+id/hoursLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/hours_label"
            android:textAppearance="@style/labelThin"
            app:layout_constraintEnd_toEndOf="@+id/hours"
            app:layout_constraintStart_toStartOf="@+id/hours"
            app:layout_constraintTop_toBottomOf="@id/hours" />

        <ImageView
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/separator"
            app:layout_constraintBottom_toBottomOf="@id/hours"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/hours" />

        <EditText
            android:id="@+id/minutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/time_edit_text_shape"
            android:cursorVisible="false"
            android:focusable="false"
            android:gravity="center_horizontal"
            android:inputType="time"
            android:textAppearance="@style/timeStyle"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/separator"
            app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_tittle" />

        <TextView
            android:id="@+id/minutesLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/minutes_label"
            android:textAppearance="@style/labelThin"
            app:layout_constraintEnd_toEndOf="@+id/minutes"
            app:layout_constraintStart_toStartOf="@+id/minutes"
            app:layout_constraintTop_toBottomOf="@id/minutes" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/add_button_shape"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/save"
            android:textAppearance="@style/entranceText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hoursLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>