<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <TextView
            android:id="@+id/emotionsCategoryHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/settings_header"
            android:textAppearance="@style/statisticHeaderStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Иван Иванов"
            android:textAppearance="@style/userName"
            app:layout_constraintEnd_toEndOf="@+id/avatar"
            app:layout_constraintStart_toStartOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/user_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emotionsCategoryHeader" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/notification_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <TextView
            android:id="@+id/notification_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/notification_permission"
            android:textAppearance="@style/addButtonText"

            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/notification_switcher"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            app:thumbTint="@color/thumb_shape"
            app:trackTint="@color/track_selector" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notificationRecycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification_message" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_notification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:background="@drawable/add_button_shape"
            android:text="@string/add_notification"
            android:textAppearance="@style/entranceText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notificationRecycler" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/fingerprint_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_notification" />

        <TextView
            android:id="@+id/fingerPrintEntrance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/fingerprint_entrance"
            android:textAppearance="@style/addButtonText"

            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/add_notification" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/fingerprint_switcher"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_notification"
            app:thumbTint="@color/thumb_shape"
            app:trackTint="@color/track_selector" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>