<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/feelingsScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/feelingsInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/notesAmountCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="11.5dp"
            app:layout_constraintHorizontal_weight="0.23"
            android:background="@drawable/label_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="5 записей"
                android:textAppearance="@style/labelBold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/notesToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_weight="0.5"
            android:background="@drawable/label_card"
            app:layout_constraintStart_toEndOf="@id/notesAmountCard"
            app:layout_constraintEnd_toStartOf="@id/streak"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="2dp"
                android:paddingBottom="8dp"
                android:text="@string/goal"
                android:textAppearance="@style/labelThin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="5 записей"
                android:textAppearance="@style/labelBold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/streak"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11.5dp"
            app:layout_constraintHorizontal_weight="0.31"
            android:background="@drawable/label_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="2dp"
                android:paddingBottom="8dp"
                android:text="серия:"
                android:textAppearance="@style/labelThin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="0 дней"
                android:textAppearance="@style/labelBold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/feelings_screen_header"
        android:fontFamily="@font/gwen_trial_regular"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:lineHeight="44sp"
        android:layout_marginStart="24dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feelingsInfo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/goalsCircle"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.example.firstlab.customView.CustomGoalCircleView
            android:id="@+id/customGoalCircleView"
            android:layout_width="match_parent"
            android:layout_height="364dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/customGoalCircleView">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:src="@drawable/add"
                app:shapeAppearance="@style/addButton"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/add_note"
                android:textAppearance="@style/addButtonText"
                app:layout_constraintEnd_toEndOf="@+id/customGoalCircleView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addButton" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>